[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am your Esham, it's my first webapp.
         </div>
+        <script>
+            alert('Warning Please don't use it');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
