[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am your Esham, it's my first webapp.
         </div>
         <script>
-            alert('Warning Please don't use it');
+            alert('Warning Please dont use it');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
